# carbon-assembler

./: Cargo.toml  out.b  test.carbon
src/: instr.rs  main.rs
src/backend/: assembler.rs
src/frontend/: lexer.rs  parser.rs
