[package]
name = "carbon-assembler"
version = "1.6.7"
edition = "2021"
license = "GPL-3.0"
description = "An assembler for the carbon CPU"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.15", features = ["derive"] }
logos = "0.13.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
